syntax = "proto3";

package skuld;

// Skuld Service (Ragnarok uses this for model selection info)
service SkuldService {
    rpc SelectModel(SelectModelRequest) returns (SelectModelResponse);
}

message SelectModelRequest {
    string prompt = 1;
    uint64 max_size = 2;
    double min_reliability = 3;
    uint64 max_latency_ms = 4;
}

message SelectModelResponse {
    string model_name = 1;
    double score = 2;
    map<string, double> factor_scores = 3;
}
